<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android=
    "http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="40dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/HeatRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"

        android:padding="10dp">


        <LinearLayout
            android:id="@+id/TubleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#3D3B3C"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/HeatNumberdisp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="#fff"
                android:text="@string/heatInitial" />

            <TextView
                android:id="@+id/LaneNumberdisp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="#fff"
                android:text="@string/LaneInitial" />

            <TextView
                android:id="@+id/RecordNumberdisp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="#fff"
                android:text="Record" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/TubleRec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:textAlignment="center">



            <TextView
                android:id="@+id/HeatNumberLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="#3D3B3C"
                android:text="0" />

            <TextView
                android:id="@+id/LaneNumberLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="#3D3B3C"
                android:text="0" />

            <TextView
                android:id="@+id/LaneRecord"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/IntialTimeLbl"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="#3D3B3C"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
